<resources>
    <string name="app_name">SocialMobile</string>
    <string name="age">Возраст*</string>
    <string name="is_retired">Пенсионер</string>
    <string name="is_disabled">Инвалид</string>
    <string name="disabled_group_1">I группа</string>
    <string name="disabled_group_2">II группа</string>
    <string name="disabled_group_3">III группа</string>
    <string name="is_married">В браке</string>
    <string name="income_per_month">Доход в месяц*</string>
    <string name="children_count">Количество несовершеннолетних детей</string>
    <string name="disabled_children_count">Количество инвалидов среди детей: %1$d</string>
    <string name="send_request">Отправить запрос</string>
    <string name="warning_empty_age">Укажите возраст</string>
    <string name="warning_empty_income">Укажите доход</string>
    <string name="request_not_complete">Заполнены не все обязательные поля</string>
    <string name="action_login">Логин</string>
    <string name="error_unknown">Неизвестная ошибка</string>
    <string name="subsidy_period_once">Единоразовая</string>
    <string name="subsidy_period_monthly">Ежемесячная</string>
    <string name="action_show_all_subsidies">Показать все субсидии</string>
    <string name="action_help">Вопрос эксперту</string>
    <string name="button_send">Отправить</string>
    <string name="message_sent_successfully">Отправлено успешно</string>
    <string name="button_cancel">Отмена</string>
    <string name="notification_subsidy_approved">Субсидия одобрена</string>
    <string name="has_disabled_children">Хотя бы один ребёнок - инвалид</string>
    <string name="is_incomplete_family">Неполная семья</string>
    <string name="young_family">Молодая семья</string>
</resources>