<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bSendRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/send_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/pbMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bSendRequest"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bSendRequest">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/cbIncompleteFamily">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="3"
                    android:hint="@string/age"/>

                <TextView
                    android:id="@+id/tvEmptyAgeWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_empty_age"
                    android:textColor="@color/warningTextColor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbIncompleteFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_incomplete_family"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilAge"
                app:layout_constraintBottom_toTopOf="@id/cbRetired"/>

            <CheckBox
                android:id="@+id/cbRetired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_retired"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbIncompleteFamily"
                app:layout_constraintBottom_toTopOf="@id/cbDisabled"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cbDisabled"
                app:layout_constraintBottom_toBottomOf="@id/rgDisabledGroups"
                android:background="@color/panelBackground"/>

            <CheckBox
                android:id="@+id/cbDisabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_disabled"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbRetired"
                app:layout_constraintBottom_toTopOf="@id/rgDisabledGroups"/>

            <RadioGroup
                android:id="@+id/rgDisabledGroups"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:paddingStart="@dimen/padding_tab"
                android:paddingEnd="@dimen/padding_tab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbDisabled"
                app:layout_constraintBottom_toTopOf="@id/cbMarried"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbDisabledGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled_group_1"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbDisabledGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled_group_2"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/rbDisabledGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled_group_3"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/cbMarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_married"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgDisabledGroups"
                app:layout_constraintBottom_toTopOf="@id/tilIncome"/>

            <CheckBox
                android:id="@+id/cbYoungFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/young_family"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toEndOf="@id/cbMarried"
                app:layout_constraintTop_toTopOf="@id/cbMarried"
                app:layout_constraintBottom_toBottomOf="@id/cbMarried"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIncome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cbMarried"
                app:layout_constraintBottom_toTopOf="@id/tilChildrenCount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIncome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="9"
                    android:hint="@string/income_per_month"/>

                <TextView
                    android:id="@+id/tvEmptyIncomeWarning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_empty_income"
                    android:textColor="@color/warningTextColor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilChildrenCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilIncome"
                app:layout_constraintBottom_toTopOf="@id/cbDisabledChildren">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChildrenCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:hint="@string/children_count"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbDisabledChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_disabled_children"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilChildrenCount"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>